--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,99 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <div class="e-table-container">
+        <table class="e-table">
+          <thead>
+            <tr>
+              <th scope="col">Periode</th>
+              <th scope="col">Status</th>
+              <th scope="col" class="e-text-right">Beløp</th>
+              <th scope="col" class="e-text-right">Faktura nr.</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row" class="e-table__cell--multiline-small">
+                This cell exceeds 250px in width, so the class 'e-table__cell--multiline-small' should be
+                added to break the lines.
+              </th>
+              <td class="e-table__cell--multiline">
+                This cell also exceeds 450px in width, so the class 'e-table__cell--multiline' should be added
+                to break the lines.
+              </td>
+              <td class="e-text-right">567,98 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+            <tr>
+              <th scope="row">Februar 2020</th>
+              <td>Betalt</td>
+              <td class="e-text-right">543,10 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+
+            <tr>
+              <th scope="row">April 2020</th>
+              <td>Sendt</td>
+              <td class="e-text-right">521,98 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+            <tr>
+              <th scope="row">Mai 2020</th>
+              <td>Betalt</td>
+              <td class="e-text-right">556,98 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <h3>Another table</h3>
+      <div class="e-table-container">
+        <table class="e-table">
+          <thead>
+            <tr>
+              <th scope="col">Periode</th>
+              <th scope="col">Status</th>
+              <th scope="col" class="e-text-right">Beløp</th>
+              <th scope="col" class="e-text-right">Faktura nr.</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row" class="e-table__cell--multiline-small">
+                This cell exceeds 250px in width, so the class 'e-table__cell--multiline' should be added to
+                break the lines.
+              </th>
+              <td class="e-table__cell--multiline-small">
+                This cell also exceeds 250px in width, so the class 'e-table__cell--multiline' should be added
+                to break the lines.
+              </td>
+              <td class="e-text-right">567,98 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+            <tr>
+              <th scope="row">Februar 2020</th>
+              <td>Betalt</td>
+              <td class="e-text-right">543,10 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+
+            <tr>
+              <th scope="row">April 2020</th>
+              <td>Sendt</td>
+              <td class="e-text-right">521,98 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+            <tr>
+              <th scope="row">Mai 2020</th>
+              <td>Betalt</td>
+              <td class="e-text-right">556,98 kr</td>
+              <td class="e-text-right">123456</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
