--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -7,7 +7,7 @@
     <!--Normal version-->
     <div class="e-bg-white">
       <div class="e-table-container">
-        <table class="e-table">
+        <table class="e-table" aria-label="Quiet SonarCloud">
           <thead>
             <tr>
               <th scope="col">Periode</th>
@@ -53,7 +53,7 @@
       </div>
       <h3>Another table</h3>
       <div class="e-table-container">
-        <table class="e-table">
+        <table class="e-table" aria-label="Quiet SonarCloud">
           <thead>
             <tr>
               <th scope="col">Periode</th>
