--- a/packages/web/src/app/shell/navbar/navbar.component.scss
+++ b/packages/web/src/app/shell/navbar/navbar.component.scss
@@ -168,3 +168,7 @@ $text-line-height: 32px;
     position: relative;
   }
 }
+
+.navbar-bottom-blur {
+  mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
+}
