Accessibility - Documentation for accessbility on each component

--- a/packages/web/src/app/doc-pages/components/file-upload-doc/file-upload-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/file-upload-doc/file-upload-doc.component.html
@@ -52,7 +52,12 @@
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Uploading'" [figmaOnly]="true">
         <ng-container ngProjectAs="sectionContent">
-          <div width="100%" style="width: 100; overflow-x: auto">
+          Use our
+          <a class="e-link e-link--inline" [routerLink]="['/components/button']">icon buttons</a>
+          and
+          <a class="e-link e-link--inline" [routerLink]="['/components/progressbar']">progressbar</a>
+          to assemble the elements needed here.
+          <div width="100%" style="width: 100; overflow-x: auto" class="e-mt-24">
             <iframe
               style="border: 1px solid rgba(0, 0, 0, 0.1)"
               width="500"
@@ -65,7 +70,12 @@
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Uploaded'" [figmaOnly]="true">
         <ng-container ngProjectAs="sectionContent">
-          <div width="100%" style="width: 100; overflow-x: auto">
+          Use our
+          <a class="e-link e-link--inline" [routerLink]="['/components/button']">icon buttons</a>
+          and
+          <a class="e-link e-link--inline" [routerLink]="['/components/progressbar']">progressbar</a>
+          to assemble the elements needed here.
+          <div width="100%" style="width: 100; overflow-x: auto" class="e-mt-24">
             <iframe
               style="border: 1px solid rgba(0, 0, 0, 0.1)"
               width="500"
