--- a/packages/web/src/app/doc-pages/components/link-doc/link-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/link-doc/link-doc.component.html
@@ -143,7 +143,8 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Links with button style'">
         <ng-container ngProjectAs="sectionContent">
-          The e-btn class can also be used on anchor tags to make links appear like buttons.
+          The e-btn class can also be used on anchor tags to make links appear like buttons. This should only
+          be done with good reason as the behavior might confuse the user.
           <app-component-example-v1 [codeHTML]="example8" [donts]="dontsExample8"></app-component-example-v1>
         </ng-container>
       </app-component-subsection>
