--- a/packages/web/src/app/doc-pages/components/tooltip-doc/tooltip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tooltip-doc/tooltip-doc.component.html
@@ -62,10 +62,10 @@
     </ng-container>
   </app-component-section>
 
-  <!--IMPLEMENTATION-->
-  <app-component-section [sectionTitle]="'Implementation'">
+  <!--ACCESSIBILITY-->
+  <app-component-section [sectionTitle]="'Accessibility'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-subsection [sectionTitle]="'Accessibility'">
+      <app-component-subsection [sectionTitle]="'Tabindex'">
         <ng-container ngProjectAs="sectionContent">
           If a tooltip is attached to a non focusable element, like an icon, remember to add the
           <span class="code-text">tabindex</span>
