--- a/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
@@ -29,6 +29,37 @@
     </ng-container>
   </app-component-section>
 
+  <!--ACCESSIBILITY-->
+  <app-component-section [sectionTitle]="'Accessibility'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Keyboard navigation'">
+        <ng-container ngProjectAs="sectionContent">
+          <div class="accessibility-keyboard-navigation">
+            <div>
+              <span class="keyboard-button">Space</span>
+              or
+              <span class="keyboard-button">Enter</span>
+              to open or close the datepicker, as well as choosing different options inside the datepicker.
+            </div>
+            <div>
+              <span class="keyboard-button">Tab</span>
+              to navigate through the different options inside the datepicker.
+            </div>
+            <div>
+              <span class="keyboard-button icon">
+                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true"></i>
+              </span>
+              <span class="keyboard-button icon" style="margin-left: 0px">
+                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true"></i>
+              </span>
+              can be used to choose between dates inside the datepicker.
+            </div>
+          </div>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
   <!--INSTALLATION-->
   <app-component-section [sectionTitle]="'Installation'">
     <ng-container ngProjectAs="sectionContent">
