--- a/packages/web/src/app/doc-pages/components/forms/segmented-controls-doc/segmented-controls-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/segmented-controls-doc/segmented-controls-doc.component.html
@@ -72,6 +72,49 @@
     </ng-container>
   </app-component-section>
 
+  <!--ACCESSIBILITY-->
+  <app-component-section [sectionTitle]="'Accessibility'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Keyboard navigation'">
+        <ng-container ngProjectAs="sectionContent">
+          <div class="accessibility-keyboard-navigation">
+            <div>
+              <span class="keyboard-button icon">
+                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true"></i>
+              </span>
+              <span class="keyboard-button icon" style="margin-left: 0px">
+                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true"></i>
+              </span>
+              or
+              <span class="keyboard-button icon">
+                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true"></i>
+              </span>
+              <span class="keyboard-button icon" style="margin-left: 0px">
+                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true"></i>
+              </span>
+              to navigate between the segmented controls options.
+            </div>
+          </div>
+        </ng-container>
+      </app-component-subsection>
+      <app-component-subsection [sectionTitle]="'ARIA'">
+        <ng-container ngProjectAs="sectionContent">
+          <ul class="e-list">
+            <li>
+              <strong>Role:</strong>
+              Remember to add
+              <span class="code-text">role="radiogroup"</span>
+              to the element that has the
+              <span class="code-text">e-segmented-controls</span>
+              class. This will signalize to assistive tools that the component has the same behavior as a
+              radiogroup.
+            </li>
+          </ul>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
   <!--IMPLEMENTATION-->
   <app-component-section [sectionTitle]="'Implementation'">
     <ng-container ngProjectAs="sectionContent">
