--- a/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
@@ -29,16 +29,51 @@
     </ng-container>
   </app-component-section>
 
-  <!--IMPLEMENTATION-->
-  <app-component-section [sectionTitle]="'Implementation'">
+  <!--ACCESSIBILITY-->
+  <app-component-section [sectionTitle]="'Accessibility'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-subsection [sectionTitle]="'Accessibility'">
+      <app-component-subsection [sectionTitle]="'Keyboard navigation'">
         <ng-container ngProjectAs="sectionContent">
-          The tabs in the tabs-component should have corresponding content / tab-panels, where each element
-          should have the attributes listed below:
+          <div class="accessibility-keyboard-navigation">
+            <div>
+              <span class="keyboard-button">Space</span>
+              or
+              <span class="keyboard-button">Enter</span>
+              to select the tab if you have
+              <span class="code-text">hasManualActivation</span>
+              set to true.
+            </div>
+            <div>
+              <span class="keyboard-button icon">
+                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true"></i>
+              </span>
+              <span class="keyboard-button icon" style="margin-left: 0px">
+                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true"></i>
+              </span>
+              to navigate through the tabs. Will also select the tab if
+              <span class="code-text">hasManualActivation</span>
+              is set to false, which is the default behavior.
+            </div>
+          </div>
+        </ng-container>
+      </app-component-subsection>
+      <app-component-subsection [sectionTitle]="'ARIA'">
+        <ng-container ngProjectAs="sectionContent">
           <ul class="e-list">
-            <li><span class="code-text">role="tabpanel"</span></li>
-            <li><span class="code-text">aria-labelledby="insertIdOfTab"</span></li>
+            <li>
+              <strong>Role:</strong>
+              Add
+              <span class="code-text">role="tabpanel"</span>
+              to the corresponding content
+              <span class="code-text">closeAriaLabel</span>
+              to specify for assistive tools what the accordion is showing and hiding.
+            </li>
+            <li>
+              <strong>Aria labelledby:</strong>
+              Add
+              <span class="code-text">aria-labelledby="insertIdOfTab"</span>
+              to the corresponding contents, with the id of that tab.
+            </li>
           </ul>
         </ng-container>
       </app-component-subsection>
