--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -3364,6 +3364,8 @@ input:focus {
     flex-direction: column;
     justify-content: center;
     padding: 8px 24px 24px 24px;
+    min-width: 330px;
+    max-width: 500px;
   }
   .e-header.e-header--open .e-header__top-bar-mobile__app, .e-header.e-header--open .e-header__top-bar-mobile__area, .e-header.e-header--open .e-header__top-bar-mobile__user {
     display: flex;
@@ -3442,6 +3444,7 @@ input:focus {
     height: 1px;
     width: 288px;
     background: #e9e9e9;
+    width: 100%;
   }
   .e-header.e-header--open .e-header__top-bar + .e-header__sidebar {
     z-index: -2;
@@ -7460,7 +7463,6 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  color: #262626;
 }
 .e-form-field__error.e-form-field__error--visible {
   visibility: visible;
