--- a/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
@@ -49,7 +49,8 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Keyboard navigation'">
         <ng-container ngProjectAs="sectionContent">
-          The toggle is build of a checkbox making the keyboard navigation identical to that of checkboxes.
+          The toggle is built up of a checkbox making the keyboard navigation identical to the keyboard
+          navigation for native checkboxes.
         </ng-container>
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Label'">
