--- a/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
@@ -35,8 +35,8 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Keyboard navigation'">
         <ng-container ngProjectAs="sectionContent">
-          Radio filters work like and are build up by radiobuttons, and therefore have the same behavior as
-          well.
+          Radio filters work like and built up of a radiobuttons, making the keyboard navigation identical to
+          the keyboard navigation for native radiobuttons.
           <div class="accessibility-keyboard-navigation e-mt-40">
             <div>
               <span class="keyboard-button">Space</span>
