--- a/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
@@ -71,8 +71,10 @@
             <li>
               <strong>Aria labelledby:</strong>
               Add
-              <span class="code-text">aria-labelledby="insertIdOfTab"</span>
-              to the corresponding contents, with the id of that tab.
+              <span class="code-text">aria-labelledby="ewc-tab-id-0"</span>
+              to the corresponding contents, with the id of that tab. The id of the tab is named like this:
+              <span class="code-text">'ewc-tab-id-' + index</span>
+              .
             </li>
           </ul>
         </ng-container>
