--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -53,11 +53,11 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Routing'">
         <ng-container ngProjectAs="sectionContent">
-          To use routing with the breadcrumb component, the callback function breadcrumbsOnChange can be used.
-          Instead of passing in a URL to the breadcrumbs prop, the breadcrumbsOnChange callback function is
-          provided with the index of the clicked breadcrumb. This functionality can be used to handle routing
-          outside of the breadcrumb component allowing the use of routing modules (e.g. Angular RoutingModule
-          or React Router).
+          To use routing with the breadcrumb component, the callback function itemsOnChange can be used.
+          Instead of passing in a URL to the breadcrumbs prop, the itemsOnChange callback function is provided
+          with the index of the clicked breadcrumb. This functionality can be used to handle routing outside
+          of the breadcrumb component allowing the use of routing modules (e.g. Angular RoutingModule or React
+          Router).
           <app-component-example-generator
             [componentData]="breadcrumbEventCode"
             [inlineExample]="true"
