Popover - List documentation

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,36 +6,18 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <elvia-popover header="BankID" type="list" hasDivider posX="right">
+      <elvia-popover header="BankID" type="list" selectable="true" hasDivider posX="right">
         <button slot="trigger" class="e-btn">Show popover</button>
         <div slot="content" class="ewc-popover__list">
           <div class="ewc-popover__list-group">
-            <h1>Title 1</h1>
             <button>
-              <elvia-icon name="edit" size="xs"></elvia-icon>
+              <elvia-icon name="checkBold" size="xs"></elvia-icon>
               <span>Rediger</span>
             </button>
             <button>
-              <elvia-icon name="bin" size="xs"></elvia-icon>
               <span>Slett</span>
             </button>
             <a>
-              <elvia-icon name="download" size="xs"></elvia-icon>
-              <span>Last ned</span>
-            </a>
-          </div>
-          <div class="ewc-popover__list-group">
-            <h1>Title 2</h1>
-            <button>
-              <elvia-icon name="edit" size="xs"></elvia-icon>
-              <span>Rediger</span>
-            </button>
-            <button>
-              <elvia-icon name="bin" size="xs"></elvia-icon>
-              <span>Slett</span>
-            </button>
-            <a>
-              <elvia-icon name="download" size="xs"></elvia-icon>
               <span>Last ned</span>
             </a>
           </div>
