--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
@@ -9,14 +9,17 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-component-example-generator
+    [componentData]="componentData"
+    [typesData]="typesData"
+  ></app-component-example-generator>
 
   <!--TYPE-->
   <app-component-section [sectionTitle]="'Type'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Informative'">
         <ng-container ngProjectAs="sectionContent">
-          In informative popover we offer popover as a shell with options like close button, title and text.
+          In informative popover we offer popover as a shell with options like close button, heading and text.
           Then you can add the content you need within the area - like text and inputs for example. Popover
           closes after clicking outside the popover, “X” or ESC KEY.
           <div
@@ -30,9 +33,9 @@
             (load)="hideContentLoader($event)"
           />
           <div class="usage-image-mobile e-w-100">
-            <app-component-subsubsection [sectionTitle]="'Title'">
+            <app-component-subsubsection [sectionTitle]="'Heading'">
               <ng-container ngProjectAs="sectionContent">
-                The title should be short and clear. The title is optional.
+                The heading should be short and clear. The heading is optional.
               </ng-container>
             </app-component-subsubsection>
             <app-component-subsubsection [sectionTitle]="'Content'">
@@ -66,7 +69,7 @@
         </ng-container>
       </app-component-subsection>
 
-      <!-- <app-component-subsection [sectionTitle]="'List'">
+      <app-component-subsection [sectionTitle]="'List'">
         <ng-container ngProjectAs="sectionContent">
           A list of actions in a popover that often are used together with a more-menu icon button. This can
           be used when the space is limited or when you want to group actions. Popover closes immediately
@@ -77,50 +80,74 @@
             class="usage-image-desktop e-w-100 e-mt-40"
           />
           <div class="usage-image-mobile e-w-100">
-            <app-component-subsubsection [sectionTitle]="'Title'">
+            <app-component-subsubsection [sectionTitle]="'Trigger'">
               <ng-container ngProjectAs="sectionContent">
-                The title should be short and clear. The title is optional.
+                The trigger is often a 'more menu' icon button
+              </ng-container>
+            </app-component-subsubsection>
+            <app-component-subsubsection [sectionTitle]="'Hover'">
+              <ng-container ngProjectAs="sectionContent">
+                You get a light grey color as a background when you hover
               </ng-container>
             </app-component-subsubsection>
             <app-component-subsubsection [sectionTitle]="'Content'">
               <ng-container ngProjectAs="sectionContent">
-                You can have different type of content like text, buttons, input etc. The content will have
-                100% width, unless the content only consists of text, then the max-width is 450px.
-              </ng-container>
-            </app-component-subsubsection>
-            <app-component-subsubsection [sectionTitle]="'Trigger'">
-              <ng-container ngProjectAs="sectionContent">The trigger can be any kind of button.</ng-container>
-            </app-component-subsubsection>
-            <app-component-subsubsection [sectionTitle]="'Close button'">
-              <ng-container ngProjectAs="sectionContent">
-                The popover will close if you click outside, ESC key, or the button connected to it. The close
-                button is optional and can be removed in special cases like in a menu list.
+                Structures as a list of buttons where the entire area is clickable
               </ng-container>
             </app-component-subsubsection>
           </div>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
 
-          <app-component-subsubsection [sectionTitle]="'Icon'">
+  <!--OPTIONS-->
+  <app-component-section [sectionTitle]="'Options'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'List'">
+        <ng-container ngProjectAs="sectionContent">
+          <app-component-subsubsection [sectionTitle]="'Icons'">
             <ng-container ngProjectAs="sectionContent">
               Use icons to help users easily recognize known actions.
+
+              <app-component-example-generator
+                [componentData]="popoverListIconsCode"
+                [inlineExample]="true"
+              ></app-component-example-generator>
             </ng-container>
           </app-component-subsubsection>
-          <app-component-subsubsection [sectionTitle]="'Title'">
+          <app-component-subsubsection [sectionTitle]="'Headings'">
             <ng-container ngProjectAs="sectionContent">
-              Different actions can be separated by titles and provide more context to the actions.
+              Different actions can be separated by headings and provide more context to the actions.
+
+              <app-component-example-generator
+                [componentData]="popoverListHeadingsCode"
+                [inlineExample]="true"
+              ></app-component-example-generator>
             </ng-container>
           </app-component-subsubsection>
-          <app-component-subsubsection [sectionTitle]="'Divider'">
-            <ng-container ngProjectAs="sectionContent">
-              Similar actions can be grouped by a divider.
-            </ng-container>
-          </app-component-subsubsection>
-          <app-component-subsubsection [sectionTitle]="'Selection'">
+          <app-component-subsubsection [sectionTitle]="'Selectable'">
             <ng-container ngProjectAs="sectionContent">
               Always one alternative selected, works likes a radio button.
+
+              <app-component-example-generator
+                [componentData]="popoverListSelectableCode"
+                [inlineExample]="true"
+              ></app-component-example-generator>
+            </ng-container>
+          </app-component-subsubsection>
+
+          <app-component-subsubsection [sectionTitle]="'Divider'">
+            <ng-container ngProjectAs="sectionContent">
+              Similar actions can be grouped by a divider. Use the prop
+              <span class="code-text">hasDivider</span>
+              and group the actions that should have divider between them with the class
+              <span class="code-text">ewc-popover__list-group</span>
+              .
             </ng-container>
           </app-component-subsubsection>
         </ng-container>
-      </app-component-subsection> -->
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
