update grey doc rgb->rgba

--- a/packages/elvis-colors/src/elviaColors.scss
+++ b/packages/elvis-colors/src/elviaColors.scss
@@ -6,13 +6,14 @@ $ElviaOn: $ElviaWhite;
 $FontColorLight: $ElviaWhite;
 $ElviaFontColorLight: $ElviaWhite;
 $ElviaInverted: $ElviaWhite;
+$ElviaGreen: #29d305;
+$ElviaCharge: $ElviaGreen;
 $ElviaBlack: #000;
 $ElviaOff: $ElviaBlack;
 $ElviaFontColor: $ElviaBlack;
+$ElviaText: $ElviaBlack;
 $ElviaGrey: #262626;
 $ElviaDark: $ElviaGrey;
-$ElviaGreen: #29d305;
-$ElviaCharge: $ElviaGreen;
 $ElviaYellow: #ffff00;
 $ElviaOrange: #ffa000;
 $ElviaWarning: $ElviaOrange;
