--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -329,7 +329,7 @@
               <div class="sub-content">{{ item.hex }}</div>
             </div>
             <div class="display-card-sub-title e-text-info">
-              <div class="sub-title e-title-caps">RGB</div>
+              <div class="sub-title e-title-caps">RGBA</div>
               <div class="sub-content">{{ item.rgba }}</div>
             </div>
             <div
